# pingwatch

./: Cargo.toml  LICENSE  MULTILINGUE.md  README.md
.github/workflows/: release.yml
locales/en/: main.ftl
locales/es/: main.ftl
locales/pt-BR/: main.ftl
src/: data_processor.rs  draw.rs  i18n.rs  main.rs  network.rs  ping_event.rs
src/exporter/: metric.rs  mod.rs  runner.rs
src/ui/: graph.rs  mod.rs  point.rs  sparkline.rs  table.rs
